# zxbyd

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PRD.md
src/bidx/: __init__.py  main.py
src/bidx/analysis/: __init__.py
src/bidx/commands/: analysis.py  awards.py  detail.py  profiles.py  search.py
src/bidx/data/: __init__.py
src/bidx/sources/: __init__.py
src/zxbyd/: __init__.py  main.py
src/zxbyd/analysis/: __init__.py  benchmarks.py  heuristics.py
src/zxbyd/commands/: __init__.py  analysis.py  awards.py  cache.py  detail.py  profiles.py  report.py  search.py
src/zxbyd/data/: __init__.py
src/zxbyd/models/: __init__.py  award.py  common.py  contract.py  enums.py  item.py  party.py  release.py  tender.py
src/zxbyd/sources/: __init__.py
src/zxbyd/storage/: __init__.py  schema.py
src/zxbyd/ui/: __init__.py
tests/: __init__.py  conftest.py  test_cli.py  test_heuristics_property.py
tests/fixtures/: awards.json  notices.json
